definitions/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: example-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx:1.15-alpine
        ports:
        - containerPort: 80
