definitions/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: example-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: localhost:5000/kubernetes101.app
        ports:
        - containerPort: 80
