definitions/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: example-namespace
spec:
  containers:
  - name: app
    image: localhost:5000/kubernetes101.app
    ports:
    - containerPort: 80
