definitions/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service-nodeport
  namespace: example-namespace
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
